Pagination | Fix visual overlap (#6695)

--- a/packages/core/src/pagination/PageButton.css
+++ b/packages/core/src/pagination/PageButton.css
@@ -27,6 +27,8 @@
 
 .saltPageButton:focus-visible {
   outline: var(--salt-focused-outline);
+  position: relative;
+  z-index: var(--salt-zIndex-default);
 }
 
 .saltPageButton:disabled {
